# tidal-to-strawberry

./: .gitignore  README.md  daily.py  flake.nix  login.py  playlist.py  pyproject.toml  setup.py
tidalplaylist/: __init__.py  common.py
